# jtag-remote-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cpp  common.h  default.nix  flake.nix  jtagd.cpp  jtagd.h  main.cpp  meson.build  mpsse.cpp  mpsse.h  rbb.cpp  shell.nix  usb_blaster.cpp  usb_blaster.h  vpi.cpp  vpi.h  xvc.cpp
.github/workflows/: build.yml
example/: common.cfg
example/cpld/: common.cfg  local.cfg
example/fpga/: common.cfg  rbb.cfg
example/riscv/: local.cfg  vpi.cfg
src/: common.cpp  common.h  main.cpp  mpsse.cpp  mpsse.h  mpsse_buffer.cpp  mpsse_buffer.h  rbb.cpp  rbb.h  usb_blaster.cpp  usb_blaster.h  xvc.cpp  xvc.h
